Archive2/fd/160695290e6207/output
In file included from main.cpp:5:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/cstdint:35:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:8:23: error: unknown type name 'uint32_t'
    explicit operator uint32_t() { return 0; }
                      ^
main.cpp:12:5: error: cannot convert 'X' to 'int' without a conversion operator
    static_cast< int >( X() );
    ^~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:14:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
main.cpp:12:5: warning: expression result unused [-Wunused-value]
    static_cast< int >( X() );
    ^~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings and 3 errors generated.
